--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "koa-bodyparser": "^4.2.1",
     "koa-cors": "^0.0.16",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "log4js": "^3.0.6",
+    "md5": "^2.2.1",
     "moment": "^2.22.2",
-    "mongodb": "^3.1.8"
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.10"
   }
 }
